fixes some overlapping of the search pane with the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,7 @@ textarea.materialize-textarea:focus.valid {
 
 .content-inside {
     padding-bottom: 50px;
-    margin-bottom: 20px;
+    margin-bottom: 80px;
 }
 
 
